AA Conformance Updates

--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
               </div>
             </div>
             <div class="row justify-content-around mt-4 text-dark">
-              <div id="buttonRows"  class="col-md-3 text-center mb-2">
+              <div id="buttonRows1"  class="col-md-3 text-center mb-2">
                   <a href="https://orgsync.com/162016/chapter">
                     <button class="btn btn-outline-warning btn-lg mx-4 align-self-center" data-toggle="tooltip" data-placement="bottom" title="You will be redirected to the OrgSync website.">Join our Team</button>
                   </a>
               </div>
-              <div id="buttonRows" class="col-md-3 text-center mb-2">
+              <div id="buttonRows2" class="col-md-3 text-center mb-2">
                   <button class="btn btn-outline-warning btn-lg mx-4 align-self-center" data-toggle="modal" data-target="#gitModal">Visit our GitHub</button>
               </div>
-              <div id="buttonRows" class="col-md-3 text-center mb-2">
+              <div id="buttonRows3" class="col-md-3 text-center mb-2">
                   <button class="btn btn-outline-warning btn-lg mx-4 align-self-center" data-toggle="modal" data-target="#contactModal">Contact Us</button>
               </div>
             </div>
@@ -129,15 +129,15 @@
           </div>
           <div class="row justify-content-around pb-5">
             <div class="col-md-3 text-center">
-              <i class="fas fa-users fa-5x mb-2"></i>
+              <i aria-label="Group Icon" class="fas fa-users fa-5x mb-2"></i>
               <p class="lead">Maintaing a nurturing and inclusive environment</p>
             </div>
             <div class="col-md-3 text-center">
-              <i class="fas fa-comments fa-5x mb-2"></i>
+              <i aria-label="Workshop Icon" class="fas fa-comments fa-5x mb-2"></i>
               <p class="lead">Hosting workshops and other public events</p>
             </div>
             <div class="col-md-3 text-center">
-              <i class="fas fa-handshake fa-5x mb-2"></i>
+              <i aria-label="Project Icon" class="fas fa-handshake fa-5x mb-2"></i>
               <p class="lead">Engaging in collaborative projects and programming</p>
             </div>
           </div>
@@ -152,7 +152,7 @@
             <div class="col">
               <div class="pt-5 pb-3 text-center">
                 <h1 class="display-4 pb-4">Our Projects</h1>
-                <p class="lead">Ongoing projects are outlined in <span class="text-primary">blue</span>. Click the cards for more details.</p>
+                <p class="lead">Ongoing projects are outlined in <span id="blueLegend">blue</span>. Click the cards for more details.</p>
               </div>
               <div class="py-1">
                 <div class="card-columns text-white pb-5">
@@ -279,9 +279,9 @@
               </div>
             </div>
           </div>
-          <p><a href="../downloads/UMD_Ai_Notes.zip">Download</a>  the Lecture Notes (from CMSC421) - We used them to self-teach ourselves AI!</p>
-          <p><a href="https://www.youtube.com/watch?v=aircAruvnKk">'3 Blue 1 Brown'</a> has some excellent videos on the basic functionalities of AI.</p>
-          <p class="pb-3"><a href="https://code.facebook.com/posts/384869298519962/artificial-intelligence-revealed/">Check out</a> Facebook's introductory videos on AI, with cool animations.</p>
+          <p><a href="../downloads/UMD_Ai_Notes.zip"><button class="btn btn-dark">Download</button></a>  the Lecture Notes (from CMSC421) - We used them to self-teach ourselves AI!</p>
+          <p><a href="https://www.youtube.com/watch?v=aircAruvnKk"><button class="btn btn-dark">'3 Blue 1 Brown'</button></a> has some excellent videos on the basic functionalities of AI.</p>
+          <p class="pb-3"><a href="https://code.facebook.com/posts/384869298519962/artificial-intelligence-revealed/"><button class="btn btn-dark">Check out</button></a> Facebook's introductory videos on AI, with cool animations.</p>
         </div>
       </section>
 
@@ -290,7 +290,7 @@
       <section id="footer" class="bg-dark">
         <div class="container">
           <div class="row text-white justify-content-around py-3">
-<<<<<<< HEAD
+
             <div class="col-sm-7 pt-2">
               © Copyright 2018 University of Maryland (UMCP)
             </div>
@@ -299,18 +299,6 @@
                 <a href="https://undergrad.cs.umd.edu/clubs-and-organizations" target="_blank"><button class="btn btn-dark">Other CS Clubs</button></a>
                 <a href="https://orgsync.com/login/university-of-maryland" target="_blank"><button class="btn btn-dark">UMD OrgSync</button></a>
                 <a href="https://www.umd.edu/web-accessibility" target="_blank"><button class="btn btn-dark">UMD Web Accessibility</button></a>
-=======
-            <div class="col-sm-8 pt-2">
-              © Copyright 2018 University of Maryland (UMCP)
-            </div>
-            <div class="col-sm-4 justify-content-end">
-              <div class="btn-group">
-                <a href="#showcase"><button class="btn btn-dark">Back to Top</button></a>
-                <a href="https://undergrad.cs.umd.edu/clubs-and-organizations"><button class="btn btn-dark">Other CS Clubs</button></a>
-                <a href="https://orgsync.com/login/university-of-maryland"><button class="btn btn-dark">UMD OrgSync</button></a>
->>>>>>> 93e70e946692f57207c16ff728499bb5ee837dcb
-              </div>
-            </div>
           </div>
         </div>
       </section>
